Route settings nav to /settings above sidebar logout

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="sidebar-utility">
-          <button data-page="settings" class="nav-link admin-only">Settings</button>
+          <button data-page="/settings" class="nav-link admin-only">Settings</button>
           <button id="logoutBtn" type="button" class="btn danger w-full">Logout</button>
         </div>
       </nav>
